jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb-udp
  namespace: default 
spec:
  type: LoadBalancer 
  externalTrafficPolicy: Cluster
  ports:
  - port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30300
  selector:
    k8s-app: jitsi
