web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: default 
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  - name: "https"
    port: 443
    targetPort: 443
  selector:
    k8s-app: jitsi
---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: jitsi
   namespace: default
   annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
  tls:
  - hosts:
    - your.domain.com 
    secretName: secretcontainingyourcert
  rules:
  - host: your.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: https
